--- a/app/src/main/res/drawable/progressbar_circular.xml
+++ b/app/src/main/res/drawable/progressbar_circular.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
+        <rotate android:fromDegrees="270" android:toDegrees="270">
         <shape android:shape="ring"
             android:useLevel="false">
-
-            <corners android:radius="10dp"/>
-
             <solid android:color="@color/common_google_signin_btn_text_light_disabled"/>
         </shape>
+        </rotate>
     </item>
     <item >
+        <rotate android:fromDegrees="270" android:toDegrees="270">
             <shape android:shape="ring"
                 android:useLevel="true">
                 <corners android:radius="10dp"/>
@@ -21,6 +21,6 @@
                     android:type="linear"
                     />
             </shape>
-
+        </rotate>
     </item>
 </layer-list>
