Water and weight measure database functionality  added in add intake tab
Signed-off-by: Prathamesh Bhagat <prathameshbhagat0608@gmail.com>

--- a/app/src/main/res/layout/fragment_add_intake_tab.xml
+++ b/app/src/main/res/layout/fragment_add_intake_tab.xml
@@ -243,7 +243,7 @@
                         android:id="@+id/add_other_water_detail_label"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="1 of 10"
+                        android:text="0 Glass"
                         android:textAlignment="center"
                         android:textColor="@color/black"
                         android:textSize="15sp"
@@ -367,7 +367,7 @@
                         android:id="@+id/add_other_weight_detail_label"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Lose 10kg"
+                        android:text="- Kg"
                         android:textAlignment="center"
                         android:textColor="@color/black"
                         android:textSize="15sp"
