--- a/app/src/main/res/layout/fragment_track_diet_tab.xml
+++ b/app/src/main/res/layout/fragment_track_diet_tab.xml
@@ -25,28 +25,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- Card View for update diet intake button -->
-        <androidx.cardview.widget.CardView
-            android:id="@+id/track_update_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
-            app:cardCornerRadius="20dp"
-            app:layout_constraintStart_toEndOf="@+id/track_name_label"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <!-- Image View for update diet intake button image -->
-            <ImageView
-                android:id="@+id/track_update_button_image_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/refresh_icon"
-                android:textColor="@color/white" />
-
-        </androidx.cardview.widget.CardView>
-
         <!-- CardView for energy -->
         <androidx.cardview.widget.CardView
             android:id="@+id/track_energy_display_card"
@@ -218,41 +196,21 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="40dp"
-            android:text="Target progress"
+            android:text="Diet target progress"
             android:textColor="#000000"
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/track_carbohydrates_display_card" />
 
-        <!-- Card View for update progress button -->
-        <androidx.cardview.widget.CardView
-            android:id="@+id/track_update_progress_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="40dp"
-            app:cardCornerRadius="20dp"
-            app:layout_constraintStart_toEndOf="@+id/track_progress_label"
-            app:layout_constraintTop_toBottomOf="@+id/track_carbohydrates_display_card">
-
-            <!-- Image View to update progress button image -->
-            <ImageView
-                android:id="@+id/track_update_progress_button_image_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/refresh_icon"
-                android:textColor="@color/white" />
-
-        </androidx.cardview.widget.CardView>
-
         <!-- Card View for energy progress-->
         <androidx.cardview.widget.CardView
             android:id="@+id/track_energy_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_margin="30dp"
+            app:cardCornerRadius="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/track_progress_label">
@@ -261,146 +219,137 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp">
+                android:orientation="vertical">
 
-                <!-- TextView for energy tracking progress bar-->
-                <TextView
-                    android:id="@+id/track_energy_progress_bar_label"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Energy : "
-                    android:textColor="#49569E"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
+                    android:layout_margin="10dp"
+                    android:orientation="horizontal">
 
-                <!-- Progress bar for energy tracking-->
-                <ProgressBar
-                    android:id="@+id/track_energy_progress_bar"
-                    style="?android:attr/progressBarStyleHorizontal"
-                    android:layout_width="fill_parent"
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1">
+
+                        <!-- TextView for energy tracking progress bar-->
+                        <TextView
+                            android:id="@+id/track_energy_progress_bar_label"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:text="Energy"
+                            android:textColor="#006666"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
+
+                        <!-- Progress bar for energy tracking-->
+                        <ProgressBar
+                            android:id="@+id/track_energy_progress_bar"
+                            android:layout_width="115dp"
+                            android:layout_height="115dp"
+                            android:layout_centerInParent="true"
+                            android:indeterminateOnly="false"
+                            android:max="100"
+                            android:progressDrawable="@drawable/progressbar_circular_blue_green" />
+
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1">
+
+                        <!-- TextView for energy tracking progress bar-->
+                        <TextView
+                            android:id="@+id/track_protein_progress_bar_label"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:text="Protein"
+                            android:textColor="#006666"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
+
+                        <!-- Progress bar for energy tracking-->
+                        <ProgressBar
+                            android:id="@+id/track_protein_progress_bar"
+                            android:layout_width="115dp"
+                            android:layout_height="115dp"
+                            android:layout_centerInParent="true"
+                            android:indeterminateOnly="false"
+                            android:max="100"
+                            android:progressDrawable="@drawable/progressbar_circular_blue_green" />
+
+                    </RelativeLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:max="100"
-                    android:padding="5dp" />
+                    android:layout_margin="10dp"
+                    android:orientation="horizontal">
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1">
+
+                        <!-- TextView for energy tracking progress bar-->
+                        <TextView
+                            android:id="@+id/track_fats_progress_bar_label"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:text="Fats"
+                            android:textColor="#006666"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
+
+                        <!-- Progress bar for energy tracking-->
+                        <ProgressBar
+                            android:id="@+id/track_fats_progress_bar"
+                            android:layout_width="115dp"
+                            android:layout_height="115dp"
+                            android:layout_centerInParent="true"
+                            android:indeterminateOnly="false"
+                            android:max="100"
+                            android:progressDrawable="@drawable/progressbar_circular_blue_green" />
+
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1">
+
+                        <!-- TextView for energy tracking progress bar-->
+                        <TextView
+                            android:id="@+id/track_carbohydrates_progress_bar_label"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:text="Carbs"
+                            android:textColor="#006666"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
+
+                        <!-- Progress bar for energy tracking-->
+                        <ProgressBar
+                            android:id="@+id/track_carbohydrates_progress_bar"
+                            android:layout_width="115dp"
+                            android:layout_height="115dp"
+                            android:layout_centerInParent="true"
+                            android:indeterminateOnly="false"
+                            android:max="100"
+                            android:progressDrawable="@drawable/progressbar_circular_blue_green" />
+
+                    </RelativeLayout>
+
+                </LinearLayout>
 
             </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-        <!-- Card View for protein progress-->
-        <androidx.cardview.widget.CardView
-            android:id="@+id/track_protein_card"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/track_energy_card">
-
-            <!-- Linear Layout for protein progress bar and label -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp">
-
-                <!-- TextView for protein tracking progress bar-->
-                <TextView
-                    android:id="@+id/track_protein_progress_bar_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Protein : "
-                    android:textColor="#49569E"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-                <!-- Progress bar for protein tracking-->
-                <ProgressBar
-                    android:id="@+id/track_protein_progress_bar"
-                    style="?android:attr/progressBarStyleHorizontal"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:max="100"
-                    android:padding="5dp" />
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-        <!-- Card View for fats progress-->
-        <androidx.cardview.widget.CardView
-            android:id="@id/track_fats_card"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/track_protein_card">
-
-            <!-- Linear Layout for fats progress bar and label -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp">
-
-                <!-- TextView for fats tracking progress bar-->
-                <TextView
-                    android:id="@+id/track_fats_progress_bar_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Fats :      "
-                    android:textColor="#49569E"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-                <!-- Progress bar for fats tracking-->
-                <ProgressBar
-                    android:id="@+id/track_fats_progress_bar"
-                    style="?android:attr/progressBarStyleHorizontal"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:max="100"
-                    android:padding="5dp" />
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-        <!-- Card View for carbohydrates progress-->
-        <androidx.cardview.widget.CardView
-            android:id="@+id/track_carbohydrates_card"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/track_fats_card">
-
-            <!-- Linear Layout for carbohydrates progress bar and label -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp">
-
-                <!-- TextView for carbohydrates tracking progress bar-->
-                <TextView
-                    android:id="@+id/track_carbohydrates_progress_bar_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Carbs. : "
-                    android:textColor="#49569E"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-                <!-- Progress bar for carbohydrates tracking-->
-                <ProgressBar
-                    android:id="@+id/track_carbohydrates_progress_bar"
-                    style="?android:attr/progressBarStyleHorizontal"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:max="100"
-                    android:padding="5dp" />
-
-            </LinearLayout>
-
         </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
