--- a/app/src/main/res/layout/fragment_track_diet_tab.xml
+++ b/app/src/main/res/layout/fragment_track_diet_tab.xml
@@ -210,7 +210,6 @@
             android:layout_height="wrap_content"
             android:layout_margin="30dp"
             app:cardCornerRadius="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/track_progress_label">
@@ -351,6 +350,176 @@
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
+        <!-- Text View for nutrient chart label -->
+        <TextView
+            android:id="@+id/track_nutrient_line_chart_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="Nutrient intake tracker"
+            android:textColor="#000000"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/track_energy_card" />
+
+        <!-- Linear Layout for BarGraph-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/track_nutrient_line_chart_label"
+            android:orientation="vertical" >
+
+            <!-- Card View for nutrient intake graph -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/track_line_chart_card"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                app:cardCornerRadius="20dp">
+
+                <!-- Linear Layout for nutrient intake graph -->
+                <LinearLayout
+                    android:id="@+id/track_line_chart_linear_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <!-- Tab Layout for nutrient selection for line chart -->
+                    <com.google.android.material.tabs.TabLayout
+                        android:id="@+id/track_line_chart_tab_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:tabGravity="fill"
+                        app:tabIndicatorFullWidth="true"
+                        app:tabMaxWidth="0dp"
+                        app:tabMode="fixed">
+
+                        <!-- Tab items -->
+                        <!-- Energy selection tab -->
+                        <com.google.android.material.tabs.TabItem
+                            android:id="@+id/track_line_chart_energy_tab"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Energy" />
+
+                        <!-- Proteins selection tab -->
+                        <com.google.android.material.tabs.TabItem
+                            android:id="@+id/track_line_chart_proteins_tab"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Protein" />
+
+                        <!-- Fats selection tab -->
+                        <com.google.android.material.tabs.TabItem
+                            android:id="@+id/track_line_chart_fats_tab"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Fats" />
+
+                        <!-- Carbs selection tab -->
+                        <com.google.android.material.tabs.TabItem
+                            android:id="@+id/track_line_chart_carbs_tab"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Carbs."  />
+
+                    </com.google.android.material.tabs.TabLayout>
+
+                    <!-- Line chart for nutrient intake visualization -->
+                    <com.github.mikephil.charting.charts.LineChart
+                        android:id="@+id/track_line_chart"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_margin="10dp" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <!-- Card View for water intake bar chart -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/track_water_intake_bar_chart_card"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                app:cardCornerRadius="20dp">
+
+                <!-- Linear Layout for water intake bar chart -->
+                <LinearLayout
+                    android:id="@+id/track_water_intake_bar_chart_linear_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <!-- Text View for water intake bar chart -->
+                    <TextView
+                        android:id="@+id/track_water_intake_chart_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="20dp"
+                        android:text="Water Intake"
+                        android:textColor="#000000"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <!-- Bar chart for water intake visualization -->
+                    <com.github.mikephil.charting.charts.BarChart
+                        android:id="@+id/track_water_intake_bar_chart"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_marginHorizontal="10dp"
+                        android:layout_marginBottom="10dp" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <!-- Card View for weight tracker chart -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/track_weight_curved_line_chart_card"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                app:cardCornerRadius="20dp">
+
+                <!-- Linear Layout for weight tracker line chart -->
+                <LinearLayout
+                    android:id="@+id/track_weight_curved_line_chart_linear_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <!-- Text View for weight tracker line chart -->
+                    <TextView
+                        android:id="@+id/track_weight_curved_line_chart_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="20dp"
+                        android:text="Weight tracker"
+                        android:textColor="#000000"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <!-- Line chart (Curved) for weight tracker -->
+                    <com.github.mikephil.charting.charts.LineChart
+                        android:id="@+id/track_weight_curved_line_chart"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_marginHorizontal="10dp"
+                        android:layout_marginBottom="10dp" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
